--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -16,9 +16,9 @@
     <li ng-message="lessThanMin">{{'Less than min error' | translate}}</li>
     <li ng-message="unknownNS">{{'Unknown namespace' | translate}}</li>
     <li ng-message="idNameRequired">{{'Id name is required' | translate}}</li>
-    <li ng-message="mustBeRequiredNS">{{'Must be required namespace' | translate}}</li>
+    <li ng-message="mustBeRequiredNS">{{'Must be imported namespace' | translate}}</li>
     <li ng-message="languageCode">{{'Is not valid language code' | translate}}</li>
-    <li ng-message="codeValue">{{'Is not valid code value' | translate}}</li>
+    <li ng-message="codeValue">{{'Is not valid reference data code' | translate}}</li>
 
     <li ng-message-exp="error.key" ng-repeat="error in dynamicErrors">{{error.message | translate}} {{error.format}}</li>
   </ul>
