--- a/src/components/model/addEditNamespaceModal.html
+++ b/src/components/model/addEditNamespaceModal.html
@@ -4,7 +4,7 @@
 
     <modal-body>
 
-      <editable data-title="Require label" disable="!ctrl.labelModifiable" context="ctrl.model">
+      <editable data-title="Namespace label" disable="!ctrl.labelModifiable" context="ctrl.model">
         <div class="input-group input-group-md">
           <input id="label" type="text" class="form-control" autofocus required string-input="modelLabel" ng-model="ctrl.label" />
         </div>
