--- a/src/components/model/conceptEditorModal.html
+++ b/src/components/model/conceptEditorModal.html
@@ -25,7 +25,7 @@
               <div class="selectContainer">
                 <select id="vocabulary" class="form-control" ng-model="ctrl.showVocabulary"
                         ng-options="(vocabulary | translateLabel: ctrl.model) for vocabulary in ctrl.vocabularies">
-                  <option value="" translate>All references</option>
+                  <option value="" translate>All vocabularies</option>
                 </select>
               </div>
             </div>
