Localize link as 'browse reference data'

--- a/src/components/model/referenceDataView.html
+++ b/src/components/model/referenceDataView.html
@@ -7,7 +7,7 @@
 
 <br />
 
-<a ng-if="!ctrl.showCodes || ctrl.referenceData.isExternal()" ng-click="ctrl.browse()" translate>Reference data codes</a>
+<a ng-if="!ctrl.showCodes || ctrl.referenceData.isExternal()" ng-click="ctrl.browse()" translate>Browse reference data codes</a>
 
 <div ng-if="ctrl.showCodes && !ctrl.referenceData.isExternal()">
 
