--- a/src/components/editor/editableReferenceDataSelect.html
+++ b/src/components/editor/editableReferenceDataSelect.html
@@ -3,14 +3,10 @@
     <editable-label data-title="'Reference data'"></editable-label>
     <div ng-hide="ctrl.referenceData" translate>Not defined</div>
   </div>
+
   <div ng-if="ctrl.referenceData" class="model-view__sub row">
-    <non-editable class="col-md-5" title="Reference data name" value="ctrl.referenceData.title" context="ctrl.model"></non-editable>
+    <non-editable class="col-md-5" title="Reference data name" value="ctrl.referenceData.title" context="ctrl.model" on-click="ctrl.browse()"></non-editable>
     <non-editable class="col-md-7" title="Description" value="ctrl.referenceData.description" context="ctrl.model"></non-editable>
-  </div>
-  <div ng-if="ctrl.referenceData" class="row">
-    <div class="col-md-12">
-      <a ng-click="ctrl.browse()" translate>Browse reference data codes</a>
-    </div>
   </div>
 
   <div ng-class="{'model-view__sub': !!ctrl.referenceData}" style="margin-bottom: 15px">
