--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -47,6 +47,12 @@ $footer-height: 50px;
   color: $brand-accent-dark;
 }
 
+state-select {
+  i.danger { color: $brand-danger; }
+  i.warning { color: $brand-warning; }
+  i.success { color: $brand-success; }
+}
+
 reference-data-view.popup {
 
   h4 { display: none; }
