--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -33,9 +33,7 @@
       <textarea id="predicateComment" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.predicate.comment"></textarea>
     </editable>
 
-    <editable data-title="State" value-as-localization-key="true" ng-if="!ctrl.predicate.unsaved" context="ctrl.model">
-      <state-select id="predicateState" state="ctrl.predicate.state" model="ctrl.model"></state-select>
-    </editable>
+    <editable-state-select ng-if="!ctrl.predicate.unsaved" id="predicateState" state="ctrl.predicate.state" model="ctrl.model"></editable-state-select>
   </div>
 
 </div>
