--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -47,7 +47,7 @@ $footer-height: 50px;
   color: $brand-accent-dark;
 }
 
-state-select {
+editable-state-select {
   i.danger { color: $brand-danger; }
   i.warning { color: $brand-warning; }
   i.success { color: $brand-success; }
