--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -25,9 +25,7 @@
       <textarea id="{{ctrl.property.internalId + 'comment'}}" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.property.comment"></textarea>
     </editable>
 
-    <editable data-title="State" value-as-localization-key="true" context="ctrl.model">
-      <state-select id="{{ctrl.property.internalId + 'state'}}" state="ctrl.property.state" model="ctrl.model"></state-select>
-    </editable>
+    <editable-state-select id="{{ctrl.property.internalId + 'state'}}" state="ctrl.property.state" model="ctrl.model"></editable-state-select>
   </div>
 </div>
 
