--- a/src/components/model/modelView.html
+++ b/src/components/model/modelView.html
@@ -11,6 +11,7 @@
           <a class="btn btn-default right" ng-show="ctrl.canAskForRights()" ng-href="{{ctrl.getGroup().homepage}}" target="_blank" translate>Ask for group rights</a>
           <export ng-hide="ctrl.isEditing()" entity="ctrl.model"></export>
           <history model="ctrl.model" resource="ctrl.model" ng-hide="ctrl.isEditing()"></history>
+          <editable-state-select class="pull-right" ng-if="!ctrl.model.unsaved" id="modelState" state="ctrl.editableInEdit.state" model="ctrl.model"></editable-state-select>
         </editable-entity-buttons>
 
         <model-form model="ctrl.editableInEdit" model-controller="ctrl.modelController"></model-form>
