--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -103,14 +103,15 @@
   </div>
 </div>
 
+<div ng-show="ctrl.showAdditionalInformation || ctrl.isEditing()">
+  <h4 translate>Additional information</h4>
 
-<h4 translate>Additional information</h4>
-
-<div class="row">
-  <div class="col-md-12">
-    <editable data-title="Editorial note" context="ctrl.model">
-      <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.property.editorialNote"></textarea>
-    </editable>
+  <div class="row">
+    <div class="col-md-12">
+      <editable data-title="Editorial note" context="ctrl.model">
+        <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.property.editorialNote"></textarea>
+      </editable>
+    </div>
   </div>
 </div>
 
