--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -1,11 +1,18 @@
+<div class="row">
+  <div class="col-md-6">
+    <h4 translate>Property information</h4>
+  </div>
 
-<div class="top-actions">
-  <button ng-if="ctrl.isEditing()"
-          type="button"
-          class="btn btn-default right"
-          ng-disabled="!ctrl.property.inUnstableState"
-          ng-click="ctrl.removeProperty(ctrl.property)" uib-tooltip="{{'Delete property' | translate}}"><i class="fa fa-trash"></i></button>
-  <editable-state-select class="pull-right" id="{{ctrl.property.internalId + 'state'}}" state="ctrl.property.state" model="ctrl.model"></editable-state-select>
+  <div class="col-md-6">
+    <button ng-if="ctrl.isEditing()"
+            type="button"
+            class="btn btn-default pull-right"
+            style="margin-left: 5px"
+            ng-disabled="!ctrl.property.inUnstableState"
+            ng-click="ctrl.removeProperty(ctrl.property)" uib-tooltip="{{'Delete property' | translate}}"><i class="fa fa-trash"></i></button>
+
+    <editable-state-select class="pull-right" id="{{ctrl.property.internalId + 'state'}}" state="ctrl.property.state" model="ctrl.model"></editable-state-select>
+  </div>
 </div>
 
 <div class="row">
