--- a/src/components/form/nonEditable.html
+++ b/src/components/form/nonEditable.html
@@ -1,4 +1,4 @@
-<div ng-if="ctrl.item.displayValue" class="editable-wrap">
+<div ng-if="ctrl.item.displayValue" class="editable-wrap" ng-style="ctrl.style">
   <editable-label data-title="ctrl.title"></editable-label>
   <div class="content">
     <a ng-if="ctrl.item.href" ng-href="{{ctrl.item.href}}">{{ctrl.item.displayValue}}</a>
