--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -5,7 +5,17 @@
     <editable data-title="{{ctrl.class.normalizedType + ' label' | capitalize}}" context="ctrl.model" autofocus>
       <input id="classLabel" class="form-control" type="text" localized-input="label" context="ctrl.model" ng-model="ctrl.class.label"/>
     </editable>
+  </div>
 
+  <div class="col-md-6">
+    <editable data-title="Description" context="ctrl.model">
+      <textarea id="classComment" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.class.comment"></textarea>
+    </editable>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
     <editable data-title="{{ctrl.class.normalizedType + ' id' | capitalize}}" context="ctrl.model">
       <input id="classId" class="form-control" type="text" required id-input="class" old="ctrl.oldClass" ng-model="ctrl.class.id" ng-disabled="!ctrl.class.inUnstableState" />
     </editable>
@@ -17,18 +27,11 @@
     <editable ng-if="ctrl.class.isOfType('shape')" data-title="Specialized from class" link="ctrl.linkToScopeclass()" context="ctrl.model">
       <uri-select id="scopeClass" type="class" uri="ctrl.class.scopeClass" model="ctrl.model" mandatory="true" after-selected="ctrl.addPropertiesFromClass(id, 'scope')"></uri-select>
     </editable>
-
-    <defined-by entity="ctrl.class" model="ctrl.model"></defined-by>
   </div>
-
   <div class="col-md-6">
-    <editable data-title="Description" context="ctrl.model">
-      <textarea id="classComment" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.class.comment"></textarea>
-    </editable>
-
+    <defined-by entity="ctrl.class" model="ctrl.model"></defined-by>
     <editable-multiple-uri-select id="equivalentClass" type="class" ng-model="ctrl.class.equivalentClasses" model="ctrl.model" data-title="{{'Equivalent class'}}"></editable-multiple-uri-select>
   </div>
-
 </div>
 
 <div class="row">
